--- a/index.html
+++ b/index.html
@@ -20,23 +20,46 @@
     </nav>
     <main>
         <div class="main-promotion">
-            Main Promotion
+            <div class="promotion-text">
+                <h2>
+                    <span style="color: red;">35%</span> <span style="color: yellow">OFF</span> on Wedding Rings!
+                </h2>
+                <p>Order now and get a 35% discount on all wedding rings in our selection!</p>
+            </div>
+            <div class="wedding-ring">
+                <!-- <img src="assets/jewel-7389356_1280.jpg" alt="wedding ring"> -->
+            </div>
         </div>
         <div class="main-articles">
             <article>
-                Article 1
+                <div class="articles-text">
+                    <h3>New necklace selection</h3>
+                    <p>Check out our new 2025 necklace selection! Now featuring new jewels and new more precise incisions to make you feel extra elegant and refined.</p>
+                </div>
+                <div class="article-image-1"></div>
             </article>
             <article>
-                Article 2
+                <div class="articles-text">
+                    <h3>New earings selection</h3>
+                    <p>Our new 2025 earing selection! New earrings feature more polished designs and a more vibrant color scheme. Take a look!</p>
+                </div>
+                <div class="article-image-2"></div>
             </article>
             <article>
-                Article 3
+                <div class="articles-text">
+                    <h3>New 90 karat gold!</h3>
+                    <p>We have updated our selections of gold products to feature the 90 karat gold option. Make sure to view the new options!</p>
+                </div>
+                <div class="article-image-3"></div>
             </article>
         </div>
     </main>
     <footer>
         <img src="assets/Asset 1@3x.png" alt="" class="logo">
-        <p>Content@</p>
+        <p>Content</p>
+        <p>About Us</p>
+        <p>Locations</p>
+        <p>FAQ</p>
     </footer>
 </body>
 </html>
