Changed the color of the footerand changed some css for the article components.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </main>
     <footer>
         <img src="assets/Asset 1@3x.png" alt="" class="logo">
-        <p>Content</p>
+        <p>Contact</p>
         <p>About Us</p>
         <p>Locations</p>
         <p>FAQ</p>
