Added some more css styling to fix some issues. There are still some issues present but im okay with  what it is for now

--- a/index.html
+++ b/index.html
@@ -34,21 +34,21 @@
             <article>
                 <div class="articles-text">
                     <h3>New necklace selection</h3>
-                    <p>Check out our new 2025 necklace selection! Now featuring new jewels and new more precise incisions to make you feel extra elegant and refined.</p>
+                    <p><b>Check out </b>our new 2025 necklace selection! Now featuring new jewels and new more precise incisions to make you feel extra elegant and refined.</p>
                 </div>
                 <div class="article-image-1"></div>
             </article>
             <article>
                 <div class="articles-text">
                     <h3>New earings selection</h3>
-                    <p>Our new 2025 earing selection! New earrings feature more polished designs and a more vibrant color scheme. Take a look!</p>
+                    <p>Our new 2025 earing selection! New earrings feature more polished designs and a more vibrant color scheme.<br> <b>Take a look!</b></p>
                 </div>
                 <div class="article-image-2"></div>
             </article>
             <article>
                 <div class="articles-text">
                     <h3>New 90 karat gold!</h3>
-                    <p>We have updated our selections of gold products to feature the 90 karat gold option. Make sure to view the new options!</p>
+                    <p>We have updated our selections of gold products to feature the 90 karat gold option.<br> <b>Make sure to view the new options!</b></p>
                 </div>
                 <div class="article-image-3"></div>
             </article>
@@ -56,10 +56,12 @@
     </main>
     <footer>
         <img src="assets/Asset 1@3x.png" alt="" class="logo">
-        <p>Contact</p>
-        <p>About Us</p>
-        <p>Locations</p>
-        <p>FAQ</p>
+        <div class="footer-info">
+            <p>Contact</p>
+            <p>About Us</p>
+            <p>Locations</p>
+            <p>FAQ</p>
+        </div>
     </footer>
 </body>
 </html>
